syntax = "proto3";

package com.city.explorer.geo.db.adapter.countries.details;

option java_multiple_files = true;
option java_package = "com.city.explorer.geo.db.adapter.countries.details";
option java_outer_classname = "CountryDetailsProto";

service CountryDetailsService {
  rpc GetCountryDetails (CountryDetailsRequest) returns (CountryDetails) {
  }
}

message CountryDetailsRequest {
  string id = 1;
}

message CountryDetails {
  string code = 1;
  string name = 2;
  string capital = 3;
  string calling_code = 4;
  string flag_image_uri = 5;
}
